--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-bin
-bin-int
+# Binaries
+**/bin/
+bin-int/
+
+# Visual Studio files and folder
+.vs/
+**.sln
+**.vcxproj
+**.vcxproj.filters
+**.vcxproj.user
